--- a/app/templates/service_admin/forms/bacteria_request_form.html
+++ b/app/templates/service_admin/forms/bacteria_request_form.html
@@ -213,7 +213,12 @@
                                                                         {% if loop.first %}
                                                                             {% for _field in subfield %}
                                                                                 {% if _field.type != 'CSRFTokenField' %}
-                                                                                    <th style="border: none">{{ _field.label.text }}</th>
+                                                                                    <th style="border: none">
+                                                                                        {{ _field.label.text }}
+                                                                                        {% if _field.type != 'IntegerField' %}
+                                                                                            <span class="has-text-danger">*</span>
+                                                                                        {% endif %}
+                                                                                    </th>
                                                                                 {% endif %}
                                                                             {% endfor %}
                                                                         {% endif %}
@@ -450,14 +455,19 @@
 
                 table.find('tbody tr').each(function () {
                     const checkbox = $(this).find('input[type="checkbox"]');
+                    const numInputs = $(this).find('input[type="number"]');
                     const textInputs = $(this).find('input[type="text"]');
 
                     const active = checkbox.is(':checked');
+                    numInputs.prop('readonly', !active);
                     textInputs.prop('readonly', !active).prop('required', active)
                         .attr('oninvalid', "this.setCustomValidity('กรุณากรอกข้อมูล')")
                         .attr('oninput', "this.setCustomValidity('')");
 
-                    if (!active) textInputs.val('');
+                    if (!active) {
+                        numInputs.val('');
+                        textInputs.val('');
+                    }
                 });
             }
 
