--- a/app/templates/service_admin/test_item_index.html
+++ b/app/templates/service_admin/test_item_index.html
@@ -191,22 +191,48 @@
                                     '</div>' +
                                     '</div>'
                             } else {
-                                var invoice_url = '/service_admin/invoice/add/' + row.quotation_id + '?menu=invoice&tab=draft';
-                                return '<div class="field has-addons">' +
-                                    '<div class="control">' +
-                                    '<a class="button is-small is-info is-rounded" ' + 'href=' + invoice_url + '>' +
-                                    '<span class="icon">' +
-                                    '<i class="fas fa-file-download"></i>' +
-                                    '</span>' +
-                                    '<span>ออกใบแจ้งหนี้</span>' +
-                                    '</a>' +
-                                    '</div>' +
-                                    '</div>'
+                                return `<div class="field has-addons">
+                                            <div class="control">
+                                                <a class="button is-small is-info is-rounded"
+                                                    onclick="vm.warn('${row.quotation_id}')">
+                                                    <span class="icon"><i class="fas fa-file-download"></i></span>
+                                                    <span>ออกใบแจ้งหนี้</span>
+                                                </a>
+                                            </div>
+                                        </div>`;
+                                {#var invoice_url = '/service_admin/invoice/add/' + row.quotation_id + '?menu=invoice&tab=draft';#}
+                                {#return '<div class="field has-addons">' +#}
+                                {#    '<div class="control">' +#}
+                                {#    '<a class="button is-small is-info is-rounded" ' + 'href=' + invoice_url + '>' +#}
+                                {#    '<span class="icon">' +#}
+                                {#    '<i class="fas fa-file-download"></i>' +#}
+                                {#    '</span>' +#}
+                                {#    '<span>ออกใบแจ้งหนี้</span>' +#}
+                                {#    '</a>' +#}
+                                {#    '</div>' +#}
+                                {#    '</div>'#}
                             }
                         }
                     }
                 ]
             });
         });
+        vm = new Vue({
+            el: '#app',
+            methods: {
+                warn: function (quotation_id) {
+                    this.$buefy.dialog.confirm({
+                        message: 'ต้องการออกใบแจ้งหนี้ของรายการนี้หรือไม่',
+                        confirmText: 'ยืนยัน',
+                        cancelText: 'ยกเลิก',
+                        onConfirm: () => {
+                            const url = `/service_admin/invoice/add/${quotation_id}?menu=invoice&tab=draft`;
+                            window.location.href = url;
+                        },
+                        type: 'is-success'
+                    });
+                },
+            }
+        })
     </script>
 {% endblock %}
